--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
+    "@fontsource/homemade-apple": "^5.2.5",
     "@tailwindcss/postcss": "^4.1.3",
     "boda-raquel-jose": "file:",
     "express": "^4.18.2",
